--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,28 +1,52 @@
-##### Keys / basics
-unbind C-b 
-set -g prefix C-a 
+bind r
+bind r source-file ~/.tmux.conf
+
+# Unbind default prefix
+unbind C-b
+
+# Set new prefix
+set -g prefix C-a
 bind C-a send-prefix
-# Reload tmux config
-bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
-set -g mouse on 
-set -g status on 
-set -g status-position bottom 
-set -g pane-border-status off
+#set-option -g status-position top
 
-# Colors / TERM
-set -g default-terminal "tmux-256color" 
-set -ag terminal-overrides ',xterm-256color:RGB'
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 
-##### TPM plugins
-set -g @plugin 'tmux-plugins/tpm' 
-set -g @plugin 'catppuccin/tmux' 
-set -g @plugin 'tmux-plugins/tmux-cpu' 
-set -g @plugin 'tmux-plugins/tmux-battery'
-
-# Catppuccin options (pick one flavor)
-set -g @catppuccin_flavor 'mocha' # latte / frappe / macchiato / mocha
-
-# Optional: catppuccin status modules (keep it simple first) set -g @catppuccin_status_modules "application cpu session 
-# uptime battery" Load TPM last
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+# ...alongside
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @catppuccin_flavor 'latte' # latte, frappe, macchiato or mocha
+
+
+# ~/.tmux.conf
+
+# Options to make tmux more pleasant
+set -g mouse on
+set -g default-terminal "tmux-256color"
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
+# Or, if using TPM, just run TPM
+
